cmake_minimum_required(VERSION 3.22.3)
project(DataFrameLib LANGUAGES CXX)
include(D:/src/vcpkg/scripts/buildsystems/vcpkg.cmake)
set(CMAKE_CXX_STANDARD 17)
set(Boost_NO_WARN_NEW_VERSIONS TRUE)
set(VCPKG_TARGET_TRIPLET "x64-windows-static")
find_package(Boost 1.79.0 COMPONENTS filesystem container REQUIRED)
add_subdirectory(src)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC ${Boost_LIBRARIES} DataFrame)
target_include_directories(${PROJECT_NAME} PUBLIC ${Boost_INCLUDE_DIRS} src)