cmake_minimum_required(VERSION 3.24.3)
project(DataFrameLib LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(Boost_NO_WARN_NEW_VERSIONS TRUE)
find_package(Boost 1.79.0 COMPONENTS filesystem container REQUIRED)
find_package(Xlnt CONFIG REQUIRED)
add_subdirectory(src)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC ${Boost_LIBRARIES} DataFrame xlnt::xlnt)
target_include_directories(${PROJECT_NAME} PUBLIC ${Boost_INCLUDE_DIRS} src)